--- a/package.json
+++ b/package.json
@@ -9,13 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
+    "@patient/shared": "file:../patient-shared",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
+    "expo-auth-session": "^7.0.10",
+    "expo-crypto": "~15.0.8",
+    "expo-document-picker": "^14.0.8",
+    "expo-image-picker": "^17.0.10",
+    "expo-linking": "^8.0.11",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
+    "i18next": "^25.7.3",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-hook-form": "^7.69.0",
+    "react-i18next": "^16.5.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.9",
+    "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.9.2"
   },
   "private": true
