README 추가 및 patient-shared 패키지 레포지토리 포함

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:shared": "cd packages/shared && npm run build"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
-    "@patient/shared": "file:../patient-shared",
+    "@patient/shared": "file:./packages/shared",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
